// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h1 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h1.reverse 1`] = `
"# Heading One
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h2 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h2.reverse 1`] = `
"## Heading Two
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h3 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h3.reverse 1`] = `
"### Heading Three
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h4 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h4.reverse 1`] = `
"#### Heading Four
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h5 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h5.reverse 1`] = `
"##### Heading Five
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality heading-h6 reverse(forward(md)).toMatchSnapshot snapshot layer: heading-h6.reverse 1`] = `
"###### Heading Six
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality paragraph reverse(forward(md)).toMatchSnapshot snapshot layer: paragraph.reverse 1`] = `
"A plain paragraph of text.
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality strong reverse(forward(md)).toMatchSnapshot snapshot layer: strong.reverse 1`] = `
"**bold text**
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality em reverse(forward(md)).toMatchSnapshot snapshot layer: em.reverse 1`] = `
"*italic text*
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality strong-em-nested reverse(forward(md)).toMatchSnapshot snapshot layer: strong-em-nested.reverse 1`] = `
"**bold *and italic* together**
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality strikethrough-del reverse(forward(md)).toMatchSnapshot snapshot layer: strikethrough-del.reverse 1`] = `
"~~struck through~~
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality code-inline reverse(forward(md)).toMatchSnapshot snapshot layer: code-inline.reverse 1`] = `
"Use \`inline code\` here.
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality code-block-python reverse(forward(md)).toMatchSnapshot snapshot layer: code-block-python.reverse 1`] = `
"\`\`\`
def hello(name):
    print(f"hello, {name}")
hello("world")
\`\`\`
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality code-block-mermaid reverse(forward(md)).toMatchSnapshot snapshot layer: code-block-mermaid.reverse 1`] = `
"\`\`\`
graph TD; A-->B
\`\`\`
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality mermaid-code-policy reverse(forward(md)).toMatchSnapshot snapshot layer: mermaid-code-policy.reverse 1`] = `
"\`\`\`
graph TD
  Start[Start] --> Stop[Stop]
  Start --> Process[Process]
  Process --> Stop
\`\`\`
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality link-plain reverse(forward(md)).toMatchSnapshot snapshot layer: link-plain.reverse 1`] = `
"[a link](https://opencode.ai)
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality link-query-amp reverse(forward(md)).toMatchSnapshot snapshot layer: link-query-amp.reverse 1`] = `
"[query link](https://example.com/page?q=1\\&r=2)
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality unordered-list reverse(forward(md)).toMatchSnapshot snapshot layer: unordered-list.reverse 1`] = `
"- alpha
- beta
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality ordered-list-nested reverse(forward(md)).toMatchSnapshot snapshot layer: ordered-list-nested.reverse 1`] = `
"1. one

2. two

   - nested a
   - nested b
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality table reverse(forward(md)).toMatchSnapshot snapshot layer: table.reverse 1`] = `
"| Feature     | Status        |
| ----------- | ------------- |
| Tables      | ok            |
| \`code\` cell | **bold** cell |
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality blockquote reverse(forward(md)).toMatchSnapshot snapshot layer: blockquote.reverse 1`] = `
"> A quoted paragraph.
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality hr reverse(forward(md)).toMatchSnapshot snapshot layer: hr.reverse 1`] = `
"---
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality image-remote reverse(forward(md)).toMatchSnapshot snapshot layer: image-remote.reverse 1`] = `
"![alt text](https://example.com/diagram.png)
"
`;

exports[`TC-RT-001: corpus-A round-trip byte equality image-attachment reverse(forward(md)).toMatchSnapshot snapshot layer: image-attachment.reverse 1`] = `
"![diagram](diagram.png)
"
`;
